Knit output to a docs folder

--- a/volcanoes.rmd
+++ b/volcanoes.rmd
@@ -1,5 +1,10 @@
 ---
 title: "Volcanoes_Github"
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 author: '9942433'
 date: "15/05/2020"
 output: html_document
